<resources>
    <string name="app_name">Mommys</string>
    <string name="app_details">Version 1.0.0 © 2026</string>
    <string name="app_version">v1.0.0</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="copied">Copied</string>
    <string name="stopped">Stopped</string>
    <string name="cleared">Cleared</string>
    <string name="yes">Yes</string>
    <string name="menu_login">Login</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_my_favourites">My favourites</string>
    <string name="menu_my_upvotes">My upvotes</string>
    <string name="menu_my_posts">My posts</string>
    <string name="menu_my_log_out">Log out</string>
    <string name="menu_go_to">Go to</string>
    <string name="menu_go_to_page">Page</string>
    <string name="menu_go_to_random_post">Random post</string>
    <string name="menu_go_to_user">User</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_popular_by_day">Popular by day</string>
    <string name="menu_popular_by_week">Popular by week</string>
    <string name="menu_popular_by_month">Popular by month</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_browse_tags">Tags</string>
    <string name="menu_browse_pools">Pools</string>
    <string name="menu_about">About</string>
    <string name="menu_about_about">About</string>
    <string name="menu_about_help">Help</string>
    <string name="menu_saved_searches">Saved searches</string>
    <string name="menu_check_updates">Check for updates</string>
    <string name="menu_settings">Settings</string>
    <string name="saved_add">Add search</string>
    <string name="saved_clear_all">Clear all</string>
    <string name="saved_order_by">Order by</string>
    <string name="saved_order_date_used">Date used</string>
    <string name="saved_order_date_created">Date created</string>
    <string name="saved_order_name">Name</string>
    <string name="saved_order_tags">Tags</string>
    <string name="saved_import">Import</string>
    <string name="saved_export">Export</string>
    <string name="pref_general">General</string>
    <string name="pref_general_summary">e621/e926, language, theme, thumbnail quality, blacklist, pin code, etc.</string>
    <string name="pref_following">Follow tags</string>
    <string name="pref_following_summary">Follow tags, artists, etc.</string>
    <string name="pref_searching">Searching &amp; tags</string>
    <string name="pref_searching_summary">Search history, suggestions, posts per page, etc.</string>
    <string name="pref_grid_view">Grid view customisation</string>
    <string name="pref_grid_view_summary">Show stats, info button, posts per row, etc.</string>
    <string name="pref_post_view">Post view customisation</string>
    <string name="pref_post_view_summary">Expand tags, data saver, back button, etc.</string>
    <string name="pref_storage">Storage and downloads</string>
    <string name="pref_storage_summary">Save location, cache, file names, etc.</string>
    <string name="pref_export">Export &amp; import</string>
    <string name="pref_export_export_title">Export app data</string>
    <string name="pref_export_export_summary">Export all user data and settings to a backup file</string>
    <string name="pref_export_import_title">Import app data</string>
    <string name="pref_export_import_summary">Import user data, saved searches and settings from a backup file.\n\nWarning! This will overwrite all of your app data, including settings and saved searches!</string>
    <string name="pref_cloudflare">Cookies &amp; Cloudflare</string>
    <string name="pref_cloudflare_self_title">Reload cookies/Cloudflare</string>
    <string name="pref_cloudflare_self_summary">Posts or thumbnails not loading? The API calls are possibly blocked by CloudFlare. A captcha must be completed to use the app. Click on this to open e926 manually to get the necessary cookies.</string>
    <string name="pref_ads">Optional ads</string>
    <string name="pref_ads_banner_grid_title">Banner ads in the grid</string>
    <string name="pref_ads_banner_grid_summary">Display banner ads below the grid view</string>
    <string name="pref_ads_banner_post_title">Banner ads above posts</string>
    <string name="pref_ads_banner_post_summary">Display banner ads above posts</string>
    <string name="pref_ads_interstitial_title">Enable interstitial ads</string>
    <string name="pref_ads_interstitial_summary">Occasionally display a fullscreen ad when returning from viewing posts</string>
    <string name="pref_consent_ads_form_title">Show ad consent form</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_privacy_crash_reports_title">Send crash reports</string>
    <string name="pref_privacy_crash_reports_summary">Enable to contribute with crash reports to improve the app</string>
    <string name="pref_privacy_analytics_title">Send analytics</string>
    <string name="pref_privacy_analytics_summary">Enable to contribute with analytics data to improve the app</string>
    <string name="pref_network">Network</string>
    <string name="pref_network_proxy_title">Proxy configuration</string>
    <string name="pref_network_proxy_summary">Enable to use a proxy server instead of connecting directly to e926/e621.</string>
    <string name="pref_post_expand_tags_title">Expand tags by default</string>
    <string name="pref_post_expand_tags_summary">Show all tags when opening a post</string>
    <string name="pref_post_expand_description_title">Expand description</string>
    <string name="pref_post_expand_description_summary">Show full description when opening a post</string>
    <string name="pref_post_hide_comments_title">Hide comments</string>
    <string name="pref_post_hide_comments_summary">Do not show comments section</string>
    <string name="pref_post_hide_score_title">Hide score</string>
    <string name="pref_post_hide_score_summary">Do not show post score</string>
    <string name="pref_post_back_button_title">Show back button</string>
    <string name="pref_post_back_button_summary">Display a back button in post view</string>
    <string name="pref_post_back_button_location_title">Back button position</string>
    <string name="pref_post_edge_navigation_title">Edge navigation</string>
    <string name="pref_post_edge_navigation_summary">Tap edges to navigate between posts</string>
    <string name="pref_post_pull_to_close_title">Pull to close</string>
    <string name="pref_post_pull_to_close_summary">Pull down on image to close post</string>
    <string name="pref_post_default_video_quality_title">Default video quality</string>
    <string name="pref_post_video_muted_title">Mute videos</string>
    <string name="pref_post_video_muted_summary">Start videos with audio muted</string>
    <string name="pref_post_video_autoplay_title">Autoplay videos</string>
    <string name="pref_post_video_autoplay_summary">Automatically play videos when viewing</string>
    <string name="pref_post_video_fullscreen_title">Fullscreen videos</string>
    <string name="pref_post_video_fullscreen_summary">Play videos in fullscreen by default</string>
    <string name="pref_post_keep_screen_awake_title">Keep screen awake</string>
    <string name="pref_post_keep_screen_awake_summary">Prevent screen from turning off</string>
    <string name="pref_post_load_hq_title">Load high quality</string>
    <string name="pref_post_load_hq_summary">Always load highest quality version</string>
    <string name="pref_post_data_saver_title">Data saver</string>
    <string name="pref_post_action_upvote_on_fav_title">Upvote on favorite</string>
    <string name="pref_post_action_upvote_on_fav_summary">Automatically upvote when favoriting</string>
    <string name="pref_post_action_upvote_on_download_title">Upvote on download</string>
    <string name="pref_post_action_upvote_on_download_summary">Automatically upvote when downloading</string>
    <string name="pref_post_action_fav_on_download_title">Favorite on download</string>
    <string name="pref_post_action_fav_on_download_summary">Automatically favorite when downloading</string>
    <string name="pref_search_history_title">Save search history</string>
    <string name="pref_search_history_summary">Remember your recent searches</string>
    <string name="pref_search_suggestions_title">Show suggestions</string>
    <string name="pref_search_suggestions_summary">Display tag suggestions while typing</string>
    <string name="pref_search_saved_new_window_title">Open saved in new window</string>
    <string name="pref_search_saved_new_window_summary">Open saved searches in a new activity</string>
    <string name="pref_search_last_on_start_title">Restore last search</string>
    <string name="pref_search_last_on_start_summary">Load last search when opening app</string>
    <string name="pref_search_newest_first_title">Newest first</string>
    <string name="pref_search_newest_first_summary">Order results by newest first</string>
    <string name="pref_post_hide_status_bar_title">Hide status bar</string>
    <string name="pref_post_hide_status_bar_summary">Hide the top status bar when viewing posts</string>
    <string name="pref_post_hide_nav_bar_title">Hide navigation bar</string>
    <string name="pref_post_hide_nav_bar_summary">Hide the bottom navigation bar</string>
    <string name="pref_post_default_video_format_title">Default video format</string>
    <string name="pref_post_video_landscape_title">Landscape videos</string>
    <string name="pref_post_video_landscape_summary">Force landscape orientation for videos</string>
    <string name="pref_post_long_click_to_unfav_title">Long click to unfavorite</string>
    <string name="pref_post_long_click_to_unfav_summary">Require long click to remove from favorites</string>
    <string name="pref_post_top_preview_title">Preview on scroll</string>
    <string name="pref_post_top_preview_summary">Show image preview when scrolling down</string>
    <string name="pref_post_controls_fullscreen_title">Button menu in fullscreen</string>
    <string name="pref_post_controls_fullscreen_summary">Show controls when in fullscreen mode</string>
    <string name="pref_post_data_saver_message">Load only viewed post without preloading</string>
    <string name="pref_post_disable_share_title">Disable share options</string>
    <string name="pref_post_disable_share_message">Hide Share and Open in browser options</string>
    <string name="pref_search_in_new_task_title">Open tags in new task</string>
    <string name="pref_search_in_new_task_summary">Open tag searches in task switcher</string>
    <string name="pref_search_fav_order_title">Sort favorites by date</string>
    <string name="pref_search_fav_order_summary">Order favorites by when you added them</string>
    <string name="pref_search_include_flash_title">Include flash posts</string>
    <string name="pref_search_include_flash_summary">Show flash/animation content</string>
    <string name="post_menu_slideshow">Slideshow</string>
    <string name="post_menu_edit_post">Edit post</string>
    <string name="post_menu_add_to_set">Add to Set</string>
    <string name="post_menu_open_post">Open in browser</string>
    <string name="post_menu_open_post_in_vp">Open in video player</string>
    <string name="post_menu_share_post">Share post</string>
    <string name="post_menu_copy_post">Copy post link</string>
    <string name="post_menu_copy_tags">Copy post tags</string>
    <string name="post_menu_reload_post">Reload post</string>
    <string name="post_menu_view_json">View JSON data</string>
    <string name="post_menu_view_wiki">View Wiki</string>
    <string name="post_menu_flag_post">Flag post</string>
    <string name="menu_downloads">Queued downloads</string>
    <string name="menu_following_tags">Followed tag posts</string>
</resources>