<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/saved_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/saved_clear_all" />

    <item
        android:id="@+id/menu_order"
        android:title="@string/saved_order_by">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/order_by_date_used"
                    android:title="@string/saved_order_date_used" />
                <item
                    android:id="@+id/order_by_date_created"
                    android:title="@string/saved_order_date_created" />
                <item
                    android:id="@+id/order_by_name"
                    android:title="@string/saved_order_name" />
                <item
                    android:id="@+id/order_by_tags"
                    android:title="@string/saved_order_tags" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_import"
        android:title="@string/saved_import" />

    <item
        android:id="@+id/action_export"
        android:title="@string/saved_export" />

</menu>
